# ai-python-agent

./: .gitignore  Makefile  README.md  call_function.py  config.py  logger.py  main.py  prompts.py  pyproject.toml
calculator/: .coverage  Makefile  README.md  lorem.txt  pyproject.toml  test_calculator.py
calculator/pkg/: calculator.py  render.py
functions/: __init__.py  get_file_content.py  get_files_info.py  run_command_in_terminal.py  run_python_file.py  terminal_ui.py  write_file.py
tests/: __init__.py  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py
