[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
dependencies = [
    "pytest~=9.0",
    "python-dotenv~=1.1",
    "requests~=2.32",
    "google-genai~=1.12",
    "pytest-cov~=5.0",
]

[tool.setuptools]
packages = ["pkg"]
